# generic-websockets-server

./: .ghcid  .gitmodules  .travis.yml  Main.hs  Makefile  build  cabal.project  cabal.project.freeze  freeze  generic-websockets-server.cabal  install  run  stack.yaml
