cabal-version: 2.0

name: generic-websockets-server
version: 0
build-type: Simple

executable generic-websockets-server
  main-is: Main.hs
  ghc-options: -Wall
  build-depends:
      aeson ^>= 1.3
    , http-types ^>= 0.12
    , mitchell-stdlib
    , wai ^>= 3.2
    , wai-websockets ^>= 3.0
    , warp ^>= 3.2
    , websockets ^>= 0.12
  default-language: Haskell2010
